Updated the build-and-deploy.yaml file

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - master # Change this to your main branch
-  pull_request_review:
-    types:
-      - submitted
+  # pull_request_review:
+  #   types:
+  #     - submitted
 
 env:
   REGISTRY: ghcr.io
